--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                   <img src="./assets/images/avatar-1.png" alt="Jiaxin Zhao" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Jiaxin Zhao/h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Jiaxin Zhao</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
