--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
 
         <!--
-          - testimonials
+          - 好友采访
         -->
 
         <section class="testimonials">
@@ -1189,7 +1189,7 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3060.245376957262!2d116.41377097644094!3d39.91352467152489!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35f052cc327e4f15%3A0xf1922a3217bf9c71!2sPeking%20Union%20Medical%20College%20Hosp.%2C%20Fangzhuang%2C%20Dong%20Cheng%20Qu%2C%20Bei%20Jing%20Shi%2C%20China%2C%20100006!5e0!3m2!1sen!2sjp!4v1748344215170!5m2!1sen!2sjp"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
