--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           - 好友采访
         -->
 
-        <section class="testimonials">
+        <section class="好友采访">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
