--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
           - 好友采访
         -->
 
-        <section class="好友采访">
+        <section class="Testimonials">
 
-          <h3 class="h3 testimonials-title">Testimonials</h3>
+          <h3 class="h3 testimonials-title">好友采访</h3>
 
           <ul class="testimonials-list has-scrollbar">
 
