--- a/index.html
+++ b/index.html
@@ -1198,7 +1198,7 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="#" class="form" data-form>
+          <form action="mailto:wujingtao102@163.com" method="post" enctype="text/plain">
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
