--- a/index.html
+++ b/index.html
@@ -1193,27 +1193,22 @@
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
-
+        
         <section class="contact-form">
 
           <h3 class="h3 form-title">Contact Form</h3>
 
           <form action="mailto:wujingtao102@163.com" method="post" enctype="text/plain">
-
-            <div class="input-wrapper">
-              <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
-
-              <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
-            </div>
-
-            <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
-
-            <button class="form-btn" type="submit" disabled data-form-btn>
-              <ion-icon name="paper-plane"></ion-icon>
-              <span>Send Message</span>
-            </button>
-
-          </form>
+  <div class="input-wrapper">
+    <input type="text" name="fullname" class="form-input" placeholder="Full name" required>
+    <input type="email" name="email" class="form-input" placeholder="Email address" required>
+  </div>
+  <textarea name="message" class="form-input" placeholder="Your Message" required></textarea>
+  <button class="form-btn" type="submit">
+    <ion-icon name="paper-plane"></ion-icon>
+    <span>Send Message</span>
+  </button>
+</form>
 
         </section>
 
