--- a/index.html
+++ b/index.html
@@ -1172,10 +1172,6 @@
 
       </article>
 
-
-
-
-
       <!--
         - #CONTACT
       -->
@@ -1192,32 +1188,68 @@
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3060.245376957262!2d116.41377097644094!3d39.91352467152489!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35f052cc327e4f15%3A0xf1922a3217bf9c71!2sPeking%20Union%20Medical%20College%20Hosp.%2C%20Fangzhuang%2C%20Dong%20Cheng%20Qu%2C%20Bei%20Jing%20Shi%2C%20China%2C%20100006!5e0!3m2!1sen!2sjp!4v1748344215170!5m2!1sen!2sjp"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
-        </section>
- <section class="contact-form">
-  <h3 class="h3 form-title">联系我</h3>
+ </section>         
+<section class="contact-form">
+  <h3 class="h3 form-title">请联系我</h3>
   <textarea id="message" class="form-input" placeholder="请写下您的留言" required style="width:100%;height:120px;"></textarea>
   <br>
-  <button class="form-btn" type="button" onclick="sendMail()">
+  <!-- mailto 方式 -->
+  <button class="form-btn" type="button" onclick="sendMailto()">
     <ion-icon name="paper-plane"></ion-icon>
-    <span>发送邮件</span>
+    <span>一键发邮件（推荐）</span>
+  </button>
+  <!-- 备选方案 -->
+  <button class="form-btn" type="button" style="margin-left:12px;" onclick="copyMailInfo()">
+    <ion-icon name="copy-outline"></ion-icon>
+    <span>复制内容手动发送</span>
   </button>
   <p style="color:#aaa;font-size:12px;margin-top:8px;">
-    如果没有自动弹出邮件窗口，请直接将留言发送到 <a href="mailto:wujingtao102@163.com">wujingtao102@163.com</a>
+    如遇点击“发邮件”无反应或空白页面，请点击“复制内容手动发送”<br>
+    收件邮箱：<span id="myemail">wujingtao102@163.com</span>
+    <button type="button" onclick="copyEmail()" style="font-size:12px;">复制邮箱</button>
   </p>
 </section>
 
 <script>
-function sendMail() {
+function sendMailto() {
   var message = document.getElementById("message").value;
+  if (!message) {
+    alert("请填写留言内容");
+    return;
+  }
   var subject = "网站留言";
   var mailto_link = "mailto:wujingtao102@163.com"
     + "?subject=" + encodeURIComponent(subject)
     + "&body=" + encodeURIComponent(message);
 
+  // 尝试打开 mailto，部分浏览器会弹出邮件客户端，有些会打开空白页
   window.location.href = mailto_link;
+
+  // 附加提示
+  setTimeout(function() {
+    // 延迟1.2秒，如果用户没有看到邮件弹窗，可以用下面的方法提醒
+    if (document.hasFocus()) {
+      alert("如果没有自动弹出邮件窗口，请点击下面“复制内容手动发送”按钮，把留言内容和邮箱复制到你常用的邮箱App发给我。");
+    }
+  }, 1200);
+}
+
+function copyMailInfo() {
+  var message = document.getElementById("message").value;
+  var email = "wujingtao102@163.com";
+  var copyText = "收件人：" + email + "\n留言内容：\n" + message;
+  navigator.clipboard.writeText(copyText).then(function() {
+    alert("留言内容和邮箱已复制，请去你的邮箱App粘贴发送。");
+  });
+}
+function copyEmail() {
+  var email = document.getElementById("myemail").innerText;
+  navigator.clipboard.writeText(email).then(function() {
+    alert("邮箱已复制！");
+  });
 }
 </script>
-      </article>
+    </article>
 
     </div>
 
